# lora-qwen-alpaca-cpu

./: README.md  compare_quality.py  draw_quality_density.py  draw_quality_dist.py  eval_200.py  finetune.py  pyproject.toml
 visualize/: draw_line_compare.py  draw_scatter_compare.py  draw_summary.py
dump/: answers.txt  answers_alpaca.txt  eval_fair.py  eval_gold_ppl.py  eval_merged.py  evaluate.py  evaluate_alpaca.py  merged_tuned_results.json  per_question_compare.py  questions.json
qwen-lora-alpaca/checkpoint-200/: rng_state.pth  scheduler.pt  trainer_state.json
qwen-lora-alpaca/checkpoint-250/: rng_state.pth  trainer_state.json
results/: base_200.json  base_results.json  per_question_compare.txt  per_question_quality.txt  test_200.json  tuned_200.json  tuned_results.json
