[project]
name = "lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "fastapi>=0.138.2",
    "matplotlib>=3.11.0",
    "peft>=0.19.1",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
